--- a/react/src/subredditNav/components/SubredditNav/SubredditNav.css
+++ b/react/src/subredditNav/components/SubredditNav/SubredditNav.css
@@ -1,9 +1,9 @@
 .SubredditNav {
   text-align: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: start;
+  flex-flow: column nowrap;
+  align-items: stretch;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
 }
